--- a/templates/page6.html
+++ b/templates/page6.html
@@ -86,21 +86,20 @@ body.dark .content {
 }
 
 .bg1::before {
-  background-image: url("{{ url_for('static', filename='images/650.webp') }}");
+  background-image: url("{{ url_for('static', filename='650.webp') }}");
 }
 
 .bg2::before {
-  background-image: url("{{ url_for('static', filename='images/1600.webp') }}");
+  background-image: url("{{ url_for('static', filename='1600.webp') }}");
 }
 
 .bg3::before {
-  background-image: url("{{ url_for('static', filename='images/1601.webp') }}");
+  background-image: url("{{ url_for('static', filename='1601.webp') }}");
 }
 
 .bg4::before {
-  background-image: url("{{ url_for('static', filename='images/1602.webp') }}");
+  background-image: url("{{ url_for('static', filename='1602.webp') }}");
 }
-
 
 
     h1, p, h2 {
