--- a/templates/page6.html
+++ b/templates/page6.html
@@ -103,7 +103,7 @@ body.dark .content {
 
 
     h1, p, h2 {
-      color: var(--btn-bg);
+      color: var(--text-color);
       opacity: 0;
       animation: fadeIn 0.75s forwards;
     }
