--- a/templates/page6.html
+++ b/templates/page6.html
@@ -24,7 +24,7 @@
 body.dark {
   --bg-color: #0D1117;
   --body-color: #0D1117;
-  --text-color: #E6EDF3;
+  --text-color: #1a1a1a;
   --card-bg: #161B22;
   --border-color: #2997D8;
   --nav-bg: #0A326A;
