--- a/templates/page6.html
+++ b/templates/page6.html
@@ -11,8 +11,7 @@
     
 :root {
   --bg-color: #E7F4FF;
-  --body-color: #8FEBFF;
-  --text-color: #1a1a1a;       
+  --body-color: #8FEBFF;    
   --card-bg: #ffffff;
   --border-color: #3BA9F4;   
   --nav-bg: #0074C7;         
@@ -24,7 +23,6 @@
 body.dark {
   --bg-color: #0D1117;
   --body-color: #0D1117;
-  --text-color: #1a1a1a;
   --card-bg: #161B22;
   --border-color: #2997D8;
   --nav-bg: #0A326A;
@@ -44,7 +42,6 @@ body.dark {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--body-color);
       margin: 0;
-      color: var(--text-color);
       overflow-x: hidden; 
     }
 
@@ -55,7 +52,7 @@ body.dark {
   max-width: 1500px;           
   width: 100%;
   z-index: 2;
-  color: var(--text-color);
+  color: #E6EDF3;
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(5px);
   border: 4px solid var(--border-color);
@@ -103,7 +100,7 @@ body.dark .content {
 
 
     h1, p, h2 {
-      color: var(--text-color);
+      color: #E6EDF3;
       opacity: 0;
       animation: fadeIn 0.75s forwards;
     }
@@ -125,6 +122,7 @@ body.dark .content {
     p {
       margin-bottom: 20px;
       font-size: 1.1em;
+      font-family: "Times New Roman", Times, serif;
     }
     
   h1 {
