--- a/templates/page2.html
+++ b/templates/page2.html
@@ -36,9 +36,12 @@ body.dark {
     
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
     }
+
+   html {
+    scroll-behavior: smooth;
+  }
+
 
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
