--- a/templates/page2.html
+++ b/templates/page2.html
@@ -34,9 +34,12 @@ body.dark {
   scroll-padding-top: 80px;
 }
     
-    * {
-      box-sizing: border-box;
-    }
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
 
    html {
     scroll-behavior: smooth;
