--- a/templates/page6.html
+++ b/templates/page6.html
@@ -126,6 +126,7 @@ body.dark .content {
     
   h1 {
   font-family: 'Lato', sans-serif;
+  text-decoration: underline;
   font-weight:300;
   letter-spacing: 2px;
   font-size:48px;
@@ -231,7 +232,7 @@ background: var(--nav-bg);
   </div>
 
   <div class="content bg1">
-      <h1 class="text-decoration: underline;">YAPRAK KOYUNU</h1>
+      <h1>YAPRAK KOYUNU</h1>
       <p>1993 yılında Japon adası Kuroshima'nın sularında keşfedilen Costasiella kuroshimae (Yaprak koyunu);
         Japonya, Endonezya ve Filipinler çevresinde bulunan, 5 mm'ye kadar büyüyebilen sevimli minik bir deniz canlısıdır.
         Bu benzersiz hayvanın büyüleyici yanı, dünyada fotosentez yapabilen tek deniz canlısı olmasıdır. Nasıl mı? 
@@ -246,7 +247,7 @@ background: var(--nav-bg);
   </div>
 
   <div class="content bg2">
-      <h1 class="text-decoration: underline;">Güneş Balığı / Mola</h1>
+      <h1>Güneş Balığı / Mola</h1>
       <p>Güneş Balığı veya Mola olarak bilinen balıklar, doğduklarında sahip oldukları sırt yüzgeci asla büyümediği için kurşun şeklinde gelişirler. Devasa hayvanlar olgunlaştıkça kendilerini katlayarak, bir dümeni anımsatan yuvarlak bir kemere dönüşürler. "Mola," Latince'de "mermer taşı" anlamına gelir ve okyanus güneş balığının nispeten dairesel şeklini tanımlar. Gümüş bir renge sahiptirler ve pürüzlü bir cilt dokuları vardır. </p>
     
       <p>Molalar, dünya çapında ılıman ve tropikal okyanuslarda bulunurlar. Güneşlenirken yüzeye yakın görünürler ve geniş sırt yüzgeçleri suyun üzerine çıktığında, sıklıkla köpekbalıklarıyla karıştırılırlar. Molalar, kemikli balıkların en ağırıdır. Tercih ettikleri yiyecekler genellikle denizanasıdır, ancak zaman zaman küçük balıklar, büyük miktarlarda zooplankton ve alg ile de beslenirler. Olgun okyanus güneş balığının ortalama uzunluğu 1,8 metre ve yüzgeçten yüzgecine uzunluğu 2,5 metredir. </p>
@@ -255,7 +256,7 @@ background: var(--nav-bg);
   </div>
 
   <div class="content bg4">
-      <h1 class="text-decoration: underline;">DAMLA BALIĞI / BLOBFISH</h1>
+      <h1>DAMLA BALIĞI / BLOBFISH</h1>
       <p>Damla balıkları olarak da adlandırılan Blobfish, ortalama 30 santimetreye kadar büyüyebilen, genellikle Avusturalya'nın güneydoğu sularında bulunan, okyanusun karanlık ve soğuk bölgelerinde, basıncın çok fazla olduğu noktalarda yaşayabilen ilginç bir canlıdır. Beslenmeleri deniz kestanelerine, kabuklu deniz hayvanlarına ve deniz kalemlerine dayanır.</p>
     
       <p>Kafa ve jöle benzeri vücut dokusunun olağandışı morfolojisi, damla balıklarının 2013’te dünyanın en çirkin hayvanı olarak seçilmesine neden olmuştur.</p>
@@ -264,7 +265,7 @@ background: var(--nav-bg);
   </div>
 
   <div class="content bg3">
-      <h1 class="text-decoration: underline;">AKSOLOTL SEMENDERİ (AMBYSTOMA MEXİCANUM)</h1>
+      <h1>AKSOLOTL SEMENDERİ (AMBYSTOMA MEXİCANUM)</h1>
       <p>Aksolotllar Ambystoma cinsine bağlı bir semender türüdür. Bu türün larvaları başkalaşım geçirmezler, bu nedenden yetişkinleri de suda yaşar ve solungaçları vardır. Bu türün habitatı asıl olarak Meksika Chalco Gölü ve Meksika'nın dağ gölleridir.</p>
     
       <p>Aksolotllar, uzuvları, solungaçları, gözleri ve beyinlerinin bölümlerini yeniden oluşturabilme yeteneğine sahip oldukları gibi en büyük genom (insandan 10 kat büyük) dizilimine de sahiptirler ve bu sebeple de bilimsel araştırmalarda yaygın olarak kullanılırlar. Göz kapakları olmayan nadir canlılardandır. Suyun içinde de dışında da nefes alabilen Aksolotl semenderi, birçok ülkede ev hayvanı olarak da yetiştirilmektedir.</p>
