--- a/templates/index.html
+++ b/templates/index.html
@@ -433,7 +433,7 @@ background: var(--nav-bg);
 }
     
  </style>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F59Z4HVCQL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
