--- a/templates/index.html
+++ b/templates/index.html
@@ -438,7 +438,7 @@ background: var(--nav-bg);
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-F59Z4HVCQL');
 </script>
 </head>
 <body>
