--- a/templates/index.html
+++ b/templates/index.html
@@ -674,14 +674,6 @@ background: var(--nav-bg);
   </video>
 </div>
 
-<?php
-  header('Access-Control-Allow-Origin: *');
-  header('Accept: */*');
-  header('Access-Control-Allow-Credentials: TRUE');
-  header('Access-Control-Allow-Methods: GET,HEAD,OPTIONS,POST,PUT');
-  header("Access-Control-Allow-Headers: Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers");
-  ?>
-
 <script>
 function getUserId() {
   let id = localStorage.getItem("uid");
@@ -699,7 +691,7 @@ function heartbeat() {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ id: USER_ID })
-  });
+  }).catch(() => {});
 }
 
 function fetchStats() {
@@ -707,7 +699,8 @@ function fetchStats() {
     .then(r => r.json())
     .then(d => {
       document.getElementById("onlineCount").innerText = d.online;
-    });
+    })
+    .catch(() => {});
 }
 
 heartbeat();
