Update total visitors text in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -447,7 +447,7 @@ background: var(--nav-bg);
   <div id="site-stats" class="value">
   Aktif Ziyaretçi Sayısı: <span id="onlineCount">0</span> kişi
   </div>
-  <div class="value">Toplam Ziyaretçiler: {{ total }} kişi </div>
+  <div class="value">Toplam Ziyaret Miktarı: {{ total }} Ziyaret</div>
   <div class="nav-links">
     <a href="#" id="openVideoBtn">Video</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">Anket</a>
