--- a/templates/index.html
+++ b/templates/index.html
@@ -489,13 +489,13 @@ background: var(--nav-bg);
   
   <div class="content-second">
     <p class="paragraph" >
-      Burada ise bizim yaptığımız anketimiz, su sözlüğümüz, Youtube linkimiz ve daha fazla unsur bulunmaktadır:
+      Burada ise bizim yaptığımız anketimiz, su sözlüğümüz, Youtube kanalımız ve daha fazla unsur bulunmaktadır:
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-mcaaHfzqC5UPbGjzMz0C7v7CHU9Qx1w8emhHqgNwNbpHtg/viewform?usp=dialog" class="btn" target="_blank" rel="noopener noreferrer">Ankete Giriniz?</a>
     <br><br>
     <a href="https://read.bookcreator.com/Cd8I2Ld71dXWdMJdOR0s9BnWIG83/hacI0slcRN-NSnh5AYwrpA" class="btn" target="_blank" rel="noopener noreferrer">Su Sözlüğü</a>
     <br><br>
-    <a href="https://www.youtube.com/@SuTak%C4%B1m%C4%B164" class="btn" target="_blank" rel="noopener noreferrer">Ankete Giriniz?</a>
+    <a href="https://www.youtube.com/@SuTak%C4%B1m%C4%B164" class="btn" target="_blank" rel="noopener noreferrer">Youtube Kanalımız</a>
     <br><br>
     <form action="/kaynakca" method="post">
       <button class="btn" type="submit">Kullanılan Kaynaklar</button>
