--- a/templates/page6.html
+++ b/templates/page6.html
@@ -127,7 +127,7 @@ body.dark .content {
   h1 {
   font-family: 'Lato', sans-serif;
   text-decoration: underline;
-  font-weight:300;
+  font-weight: bold;
   letter-spacing: 2px;
   font-size:48px;
   text-align: center;
