--- a/templates/page6.html
+++ b/templates/page6.html
@@ -56,6 +56,7 @@ body.dark {
   backdrop-filter: blur(5px);
   border: 4px solid var(--border-color);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   line-height: 1.7;
   font-size: 1.1rem;
   position: relative;
