--- a/templates/index.html
+++ b/templates/index.html
@@ -325,7 +325,7 @@ body.dark .content-second {
     }
 
     .value {
-      color: var(--text-color);
+      color: white;
       text-align: left;
       font-family: "Times New Roman", "Courier New", "Lucida Console"
     }
