--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,96 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='Favicon.png') }}" type="image/png">
 
   <style>
+    @import url(//fonts.googleapis.com/css?family=Lato:300:400);
+
+  .header {
+position: fixed;
+  z-index: -1;
+  overflow: hidden;
+  text-align:center;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  color: var(--btn-bg);
+}
+
+
+.inner-header {
+  height:65vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
+}
+
+.flex { 
+  display: flex;
+  z-index: -1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+	  
+.waves {
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30vh;
+  min-height: 100px;
+  max-height: 300px;
+  z-index: 10;
+  pointer-events: none; 
+}
+
+
+
+.content-wave {
+  position:relative;
+  z-index: -1;
+  height:20vh;
+  text-align:center;
+  background-color: var(--card-bg);
+}
+
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content-wave {
+    height:30vh;
+  }
+  .title {
+    font-size:24px;
+  }
+}
 
 :root {
   --bg-color: #E7F4FF;
@@ -460,6 +550,27 @@ background: var(--nav-bg);
 
   </div>
 </nav>
+
+  	<div class="header">
+<div class="inner-header flex">
+</div>
+
+<div>
+<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+<defs>
+<path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+</defs>
+<g class="parallax">
+<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
+<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+</g>
+</svg>
+</div>
+
+</div>
 
 
   <div id="drip-container"></div>
